# legalize

./: .gitignore  .gitmodules  1.0_0.3_0.3.ps  2.0_0.5_0.3.ps  2.0_0.5_0.5.ps  3.0_1.0_0.5..ps  3.0_1.5_0.3.ps  Cargo.toml  Flip(not_completely_work).ps  README.md  floorplan.ps  standard.ps  t.ps  t1.ps  t11.ps  t1c.ps  test01.ps  test100.ps  test104.ps  test126.ps  tetris.ps
benches/: hhl_100.txt  hhl_104.txt  hhl_126.txt  ibm01.legal.txt  ibm05.legal.txt  test1.txt
src/: lib.rs  main.rs
src/legalize/: flip.rs  hcwt_dp.rs  hcwt_legal.rs  mod.rs  rowfill.rs  tetris.rs
